Default logging implementation, already using correct enabled mechanism and logging for trace and debug

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -6,7 +6,7 @@ end
 
 target 'Tests', :exclusive => true do
   pod "DRYLogging", :path => "../"
-
-  pod 'Specta'
-  pod 'Expecta'
+  pod "OCHamcrest"
+  pod "OCMockito"
+  pod "DRYTestUtilities"
 end
