--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@
 # * https://github.com/supermarin/xcpretty#usage
 osx_image: xcode8
 language: objective-c
+xcode_workspace: Example/DRYLogging.xcworkspace 
+xcode_scheme: DRYLogging-Example
 # cache: cocoapods
 podfile: Example/Podfile
 before_install:
@@ -11,5 +13,4 @@ before_install:
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
-- set -o pipefail && xcodebuild test -workspace Example/DRYLogging.xcworkspace -scheme DRYLogging-Example -sdk iphonesimulator ONLY_ACTIVE_ARCH=NO | xcpretty -c
 - pod lib lint --quick
