--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@
 # * https://github.com/supermarin/xcpretty#usage
 osx_image: xcode8
 language: objective-c
-xcode_workspace: Example/DRYLogging.xcworkspace 
-xcode_scheme: DRYLogging-Example
 # cache: cocoapods
 podfile: Example/Podfile
 before_install:
@@ -13,4 +11,5 @@ before_install:
 install:
 - gem install xcpretty --no-rdoc --no-ri --no-document --quiet
 script:
+- set -o pipefail && xcodebuild test -workspace Example/MyLibrary.xcworkspace -scheme MyLibrary-Example -sdk iphonesimulator9.3 ONLY_ACTIVE_ARCH=NO | xcpretty
 - pod lib lint --quick
