Ported log level test to swift using Quick/Nimble

--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,5 +10,7 @@ target 'DRYLoggingExample' do
       pod "OCHamcrest"
       pod "OCMockito"
       pod "DRYTestUtilities"
+      pod "Quick"
+      pod "Nimble"
   end
 end
